# simple_texture_synthesis

./: Color.cpp  Color.hpp  Color.hpp.gch  GLShader.cpp  GLShader.hpp  Image.cpp  Image.hpp  Patch.cpp  Patch.hpp  Pixel.cpp  Pixel.hpp  README.md  Utils.cpp  Utils.hpp  Utils.hpp.gch  Window.cpp  configure.ac  makefile  shader.frag  texture_brick.tga  texture_brick_synthesized.tga  texture_stone_synthesized.tga  window  window.cpp
