    AC_INIT([myprogram],[1.0],[you@example.com])
    AC_CONFIG_SRCDIR([main.cpp])
    AM_INIT_AUTOMAKE([foreign])
    AM_MAINTAINER_MODE([enable])

    AC_PROG_CXX

    PKG_CHECK_MODULES([gllibs], [gl glew glfw3 >= 3.0])

    AC_CONFIG_HEADERS([config.h])
    AC_CONFIG_FILES([Makefile])
    AC_OUTPUT
